--- a/css/phone.css
+++ b/css/phone.css
@@ -14,4 +14,16 @@ a{
 a:hover{
 margin: 8px;
 background: #00fe99;
+padding: 5px;
+}
+
+ul{
+
+    width: 300px;
+    margin: 0 auto;
+}
+
+body{
+    box-sizing: border-box;
+    width: 100%;
 }
