--- a/css/phone.css
+++ b/css/phone.css
@@ -5,22 +5,43 @@ li{
 img{
     width: 200px;
     height: 100px;
-    /* width: 100%; */
 }
 a{
+    display: block;
     text-decoration: none;
     color: black;
+    position: relative;
+    margin-right: 8px;
 }
 a:hover{
-margin: 8px;
 background: #00fe99;
-padding: 5px;
+transform: translateX(8px);
 }
-
+a:hover{
+    color: #000000;
+    }
 ul{
-
+    padding: 0;
     width: 300px;
     margin: 0 auto;
+  
+}
+li{
+    background: #000;
+    padding: 0;
+    margin: 0;
+   
+}
+li>a{
+    color: aliceblue;
+}
+
+/* li::after{
+    background: #600303;
+} */
+
+li{
+    display: inline-block;
 }
 
 body{
