--- a/css/phone.css
+++ b/css/phone.css
@@ -13,12 +13,16 @@ a{
     position: relative;
     margin-right: 8px;
 }
-a:hover{
+li:hover{
 background: #00fe99;
+border: 1px solid #000000;
 transform: translateX(8px);
 }
-a:hover{
+li:hover{
+    border: 1px solid #000000;
+    background: #00fe99;
     color: #000000;
+    margin-top: 10px;
     }
 ul{
     padding: 0;
@@ -34,6 +38,7 @@ li{
 }
 li>a{
     color: aliceblue;
+    padding: 5px;
 }
 
 /* li::after{
@@ -42,6 +47,7 @@ li>a{
 
 li{
     display: inline-block;
+    
 }
 
 body{
